Fix nested layout issue
Some pages have a nested layout so reset the inner container

--- a/src/layout/_container.scss
+++ b/src/layout/_container.scss
@@ -1,8 +1,15 @@
 // Various containers wrapping content from old Bootstrap.
 // The specific selectors are needed to override existing styles
 // sass-lint:disable no-combinators
-body >.layout,
+body > .layout,
 .restrict-width,
 body .container {
   @extend %container;
+}
+
+// Some pages (e.g. http://localhost:8087/about/what-we-do/into-practice/audit-and-service-improvement/assessment-tools/)
+// weirdly have nested container so we reset the inner container
+body > .layout .layout.container {
+  max-width: 100%;
+  width: auto;
 }
